day23/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - 
    #host: greeting.xxx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: greeting-service
          servicePort: 80
  - 
    #host: caddy.xxx.io
    http:
      paths:
      - path: /caddy
        backend:
          serviceName: caddy-service
          servicePort: 80
  - 
    #host: nginx.xxx.io
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx-service
          servicePort: 80
